# ChangeLog for dev-libs/gdome2
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/gdome2/ChangeLog,v 1.10 2004/03/24 14:32:38 weeve Exp $

  24 Mar 2004; Jason Wever <weeve@gentoo.org> gdome2-0.7.4.ebuild:
  Stable on sparc.

  21 Mar 2004; David Holm <dholm@gentoo.org> gdome2-0.7.2.ebuild:
  Added to ~ppc. It's a dependency of dev-perl/XML-GDOME-0.85.

*gdome2-0.8.0 (22 Nov 2003)

  22 Nov 2003; Heinrich Wendel <lanius@gentoo.org> gdome2-0.8.0.ebuild,
  files/gdome2-0.8.0-libxml.patch:
  fixed compile with libxml-2.6.2

  Heinrich Wendel <lanius@gentoo.org> gdom2-0.8.0.ebuild,
  version bump;

  14 Sep 2003; David Holm <dholm@gentoo.org> gdome2-0.7.4.ebuild:
  Added to ~ppc after testing.

  26 May 2003; Alastair Tse <liquidx@gentoo.org> gdome2-0.7.4.ebuild:
  RDEPEND to DEPEND

*gdome2-0.7.4 (22 May 2003)

  22 May 2003; Martin Holzer <mholzer@gentoo.org> gdome2-0.7.4.ebuild:
  Version bumped. Ebuild submitted by Christian Kruse <ckruse@wwwtech.de> in 
  #21458.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*gdome2-0.7.2 (09 Jul 2002)

  09 Jul 2002; Maik Schreiber <blizzy@gentoo.org> :

  Initial import, closes bug #4125.
  ebuild submitted by Leonardo Boshell <gentoo@kapcoweb.com>