@@ -1,8 +1,10 @@
-MD5 8f4e95c15055e6dd266e7272f584d03c ChangeLog 1313
 MD5 be14ab60b7466a01fc87a4c603901068 gdome2-0.7.2.ebuild 780
 MD5 9711048af6329f2ef8d7df70ca471648 gdome2-0.7.4.ebuild 802
 MD5 1f654609cf9047359bbb3516a1e740c4 gdome2-0.8.0.ebuild 885
+MD5 83362d0a12743e3afe9961ba1244c390 gdome2-0.8.1.ebuild 637
+MD5 a86cc6031b648e57e0da85a4322a15d7 ChangeLog 1418
 MD5 e6b845ed3e5939ce62ee4d95f942071f files/digest-gdome2-0.7.2 64
 MD5 998bb98160e3d9c3f967b518e4d12341 files/digest-gdome2-0.7.4 64
 MD5 5f9413aa7e0b6062f96137db96fac4e9 files/digest-gdome2-0.8.0 64
 MD5 adc1c918fc7ccbcab64ad23ef008641e files/gdome2-0.8.0-libxml.patch 658
+MD5 0c58b375556cc80f671c0ed84e953051 files/digest-gdome2-0.8.1 64
