@@ -1,0 +1,22 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/gdome2/Attic/gdome2-0.8.1.ebuild,v 1.1 2004/04/03 02:40:32 matsuu Exp $
+
+inherit gnome2
+
+DESCRIPTION="The DOM C library for the GNOME project"
+HOMEPAGE="http://gdome2.cs.unibo.it/"
+SRC_URI="http://gdome2.cs.unibo.it/tarball/${P}.tar.gz"
+
+SLOT="0"
+LICENSE="LGPL-2.1"
+KEYWORDS="~x86 ~sparc ~ppc ~amd64"
+IUSE="doc"
+
+RDEPEND=">=dev-libs/glib-2.2.0
+	>=dev-libs/libxml2-2.4.26"
+
+DEPEND="${RDEPEND}
+	doc? ( >=dev-util/gtk-doc-1 )"
+
+DOCS="AUTHORS ChangeLog INSTALL MAINTAINERS NEWS README*"
